# linera-prediction-market

./: Cargo.toml  README.md  run.bash
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CreateMarketModal.tsx  Header.tsx  Hero.tsx  MarketCard.tsx  StatsBar.tsx  Toast.tsx  TradeModal.tsx
frontend/src/hooks/: useLinera.ts
frontend/src/utils/: types.ts
src/: contract.rs  lib.rs  service.rs
