[package]
name = "prediction-market"
version = "0.1.0"
edition = "2021"
authors = ["Buildathon Team"]
license = "Apache-2.0"

[dependencies]
linera-sdk = "0.15"
async-graphql = "7"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
linera-sdk = { version = "0.15", features = ["test"] }

[[bin]]
name = "prediction_market_contract"
path = "src/contract.rs"

[[bin]]
name = "prediction_market_service"
path = "src/service.rs"

[lib]
path = "src/lib.rs"
